--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^2.7.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1"
   },
   "devDependencies": {
