--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "native-base": "^2.7.2",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-router-flux": "^4.0.1",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1"
   },
