--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-modal": "^6.5.0",
+    "react-native-pie-chart": "^1.0.13",
     "react-native-router-flux": "^4.0.1",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1"
